--- a/pages/gestacional.html
+++ b/pages/gestacional.html
@@ -184,18 +184,18 @@
                         </div>
 
                         <div class="card col-9 mt-4 d-flex flex-column justify-content-center p-3">
-                            <div class="container d-flex gap-4 p-0">
+                            <div class="container d-sm-block d-md-flex gap-4 p-0">
 
                                 <label class="card-text mb-0">FEZ PRÉ-NATAL?</label>
 
-                                <div class="form-check">
+                                <div class="form-check mt-3 mb-3 mt-sm-3 mb-sm-3 mt-md-0 mb-md-0">
                                     <input class="form-check-input" type="radio" name="anotherTimesnatal"
                                         id="flexRadioDefault1">
                                     <label class="form-check-label card-text" for="flexRadioDefault1">
                                         SIM
                                     </label>
                                 </div>
-                                <div class="form-check">
+                                <div class="form-check mt-sm-0 mt-md-0 mb-md-0">
                                     <input class="form-check-input" type="radio" name="anotherTimesnatal"
                                         id="flexRadioDefault2">
                                     <label class="form-check-label card-text" for="flexRadioDefault2">
@@ -210,18 +210,18 @@
 
 
                         <div class="card col-9 mt-4 d-flex flex-column justify-content-center p-3">
-                            <div class="container d-flex gap-4 p-0">
+                            <div class="container d-sm-block d-md-flex gap-4 p-0">
 
                                 <label class="card-text mb-0">EXISTE POSSIBILIDADE DE COMPLICAÇÕES?</label>
 
-                                <div class="form-check">
+                                <div class="form-check mt-3 mb-3 mt-sm-3 mb-sm-3 mt-md-0 mb-md-0">
                                     <input class="form-check-input" type="radio" name="anotherTimescomplicacoes"
                                         id="flexRadioDefault1">
                                     <label class="form-check-label card-text" for="flexRadioDefault1">
                                         SIM
                                     </label>
                                 </div>
-                                <div class="form-check">
+                                <div class="form-check mt-sm-0 mt-md-0 mb-md-0">
                                     <input class="form-check-input" type="radio" name="anotherTimescomplicacoes"
                                         id="flexRadioDefault2">
                                     <label class="form-check-label card-text" for="flexRadioDefault2">
@@ -232,26 +232,24 @@
                         </div>
 
                         <div class="card col-9 mt-4 d-flex flex-column justify-content-center p-3">
-                            <div class="container d-flex gap-4 p-0">
+                            <div class="container d-sm-block d-md-flex gap-4 p-0">
 
                                 <label class="card-text mb-0">É O PRIMEIRO FILHO?</label>
 
-                                <div class="form-check">
+                                <div class="form-check mt-3 mb-3 mt-sm-3 mb-sm-3 mt-md-0 mb-md-0">
                                     <input class="form-check-input" type="radio" name="anotherTimesfilho"
                                         id="flexRadioDefault1">
                                     <label class="form-check-label card-text" for="flexRadioDefault1">
                                         SIM
                                     </label>
                                 </div>
-                                <div class="form-check">
+                                <div class="form-check mt-sm-0 mt-md-0 mb-md-0">
                                     <input class="form-check-input" type="radio" name="anotherTimesfilho"
                                         id="flexRadioDefault2">
                                     <label class="form-check-label card-text" for="flexRadioDefault2">
                                         NÃO
                                     </label>
                                 </div>
-
-
                             </div>
                             <br>
                             <label class="card-text">QUANTOS?</label>
@@ -260,7 +258,7 @@
 
                         <div class="card col-9 mt-4" style="padding: 12px;">
                             <label class="card-text">QUE HORAS INICIARAM AS CONTRAÇÕES?</label>
-                            <input type="text" class="text-line">
+                            <input type="text" class="text-line" id="timeInput1">
                         </div>
 
                         <div class="card col-9 mt-4" style="padding: 12px;">
@@ -274,19 +272,19 @@
                         </div>
 
                         <div class="card col-9 mt-4 d-flex flex-column justify-content-center p-3">
-                            <div class="container d-flex gap-4 p-0">
+                            <div class="container d-sm-block p-0">
 
                                 <label class="card-text mb-0">SENTE PRESSÃO NA REGIÃO DO QUADRIL OU VONTADE DE
                                     EVACUAR?</label>
 
-                                <div class="form-check">
+                                <div class="form-check mt-3 mb-3 mt-sm-3 mb-sm-3">
                                     <input class="form-check-input" type="radio" name="anotherTimespressao"
                                         id="flexRadioDefault1">
                                     <label class="form-check-label card-text" for="flexRadioDefault1">
                                         SIM
                                     </label>
                                 </div>
-                                <div class="form-check">
+                                <div class="form-check mt-sm-0 mt-md-0 mb-md-0">
                                     <input class="form-check-input" type="radio" name="anotherTimespressao"
                                         id="flexRadioDefault2">
                                     <label class="form-check-label card-text" for="flexRadioDefault2">
@@ -297,18 +295,18 @@
                         </div>
 
                         <div class="card col-9 mt-4 d-flex flex-column justify-content-center p-3">
-                            <div class="container d-flex gap-4 p-0">
+                            <div class="container d-sm-block d-md-flex gap-4 p-0">
 
                                 <label class="card-text mb-0">JÁ HOUVE RUPTURA DA BOLSA?</label>
 
-                                <div class="form-check">
+                                <div class="form-check mt-3 mb-3 mt-sm-3 mb-sm-3 mt-md-0 mb-md-0">
                                     <input class="form-check-input" type="radio" name="anotherTimesbolsa"
                                         id="flexRadioDefault1">
                                     <label class="form-check-label card-text" for="flexRadioDefault1">
                                         SIM
                                     </label>
                                 </div>
-                                <div class="form-check">
+                                <div class="form-check mt-sm-0 mt-md-0 mb-md-0">
                                     <input class="form-check-input" type="radio" name="anotherTimesbolsa"
                                         id="flexRadioDefault2">
                                     <label class="form-check-label card-text" for="flexRadioDefault2">
@@ -319,18 +317,18 @@
                         </div>
 
                         <div class="card col-9 mt-4 d-flex flex-column justify-content-center p-3">
-                            <div class="container d-flex gap-4 p-0">
+                            <div class="container d-sm-block d-md-flex gap-4 p-0">
 
                                 <label class="card-text mb-0">FOI FEITO INSPEÇÃO VISUAL?</label>
 
-                                <div class="form-check">
+                                <div class="form-check mt-3 mb-3 mt-sm-3 mb-sm-3 mt-md-0 mb-md-0">
                                     <input class="form-check-input" type="radio" name="anotherTimesvisual"
                                         id="flexRadioDefault1">
                                     <label class="form-check-label card-text" for="flexRadioDefault1">
                                         SIM
                                     </label>
                                 </div>
-                                <div class="form-check">
+                                <div class="form-check mt-sm-0 mt-md-0 mb-md-0">
                                     <input class="form-check-input" type="radio" name="anotherTimesvisual"
                                         id="flexRadioDefault2">
                                     <label class="form-check-label card-text" for="flexRadioDefault2">
@@ -341,18 +339,18 @@
                         </div>
 
                         <div class="card col-9 mt-4 d-flex flex-column justify-content-center p-3">
-                            <div class="container d-flex gap-4 p-0">
+                            <div class="container d-sm-block d-md-flex gap-4 p-0">
 
                                 <label class="card-text mb-0">PARTO REALIZADO?</label>
 
-                                <div class="form-check">
+                                <div class="form-check mt-3 mb-3 mt-sm-3 mb-sm-3 mt-md-0 mb-md-0">
                                     <input class="form-check-input" type="radio" name="anotherTimesparto"
                                         id="flexRadioDefault1">
                                     <label class="form-check-label card-text" for="flexRadioDefault1">
                                         SIM
                                     </label>
                                 </div>
-                                <div class="form-check">
+                                <div class="form-check mt-sm-0 mt-md-0 mb-md-0">
                                     <input class="form-check-input" type="radio" name="anotherTimesparto"
                                         id="flexRadioDefault2">
                                     <label class="form-check-label card-text" for="flexRadioDefault2">
@@ -366,18 +364,18 @@
                         </div>
 
                         <div class="card col-9 mt-4 d-flex flex-column justify-content-center p-3">
-                            <div class="container d-flex gap-4 p-0">
+                            <div class="container d-sm-block d-md-flex gap-4 p-0">
 
                                 <label class="card-text mb-0">SEXO DO BEBÊ</label>
 
-                                <div class="form-check">
+                                <div class="form-check mt-3 mb-3 mt-sm-3 mb-sm-3 mt-md-0 mb-md-0">
                                     <input class="form-check-input" type="radio" name="anotherTimessexo"
                                         id="flexRadioDefault1">
                                     <label class="form-check-label card-text" for="flexRadioDefault1">
                                         MASC
                                     </label>
                                 </div>
-                                <div class="form-check">
+                                <div class="form-check mt-sm-0 mt-md-0 mb-md-0">
                                     <input class="form-check-input" type="radio" name="anotherTimessexo"
                                         id="flexRadioDefault2">
                                     <label class="form-check-label card-text" for="flexRadioDefault2">
@@ -398,6 +396,38 @@
 
     <script>
         document.getElementById('timeInput').addEventListener('input', function (e) {
+            // Obtém o valor atual do campo de texto
+            var value = e.target.value;
+
+            // Remove caracteres não numéricos
+            value = value.replace(/\D/g, '');
+
+            // Adiciona dois pontos entre as horas e os minutos
+            if (value.length > 2) {
+                value = value.slice(0, 2) + ':' + value.slice(2);
+            }
+
+            // Verifica se a hora é válida (0-23)
+            var hour = parseInt(value.slice(0, 2));
+            if (hour > 23) {
+                value = '23' + value.slice(2);
+            }
+
+            // Verifica se os minutos são válidos (0-59)
+            if (value.length > 2) {
+                var minutes = parseInt(value.slice(3));
+                if (minutes > 59) {
+                    value = value.slice(0, 3) + '59';
+                }
+            }
+
+            // Atualiza o valor do campo de texto
+            e.target.value = value;
+        });
+    </script>
+
+    <script>
+        document.getElementById('timeInput1').addEventListener('input', function (e) {
             // Obtém o valor atual do campo de texto
             var value = e.target.value;
 
