--- a/pages/anamnese médica.html
+++ b/pages/anamnese médica.html
@@ -208,8 +208,7 @@
                     <hr class="dropdown-divider" />
                   </li>
                   <li>
-                    <a class="dropdown-item" href="#" style="white-space: break-spaces">FORMA DE CONDUÇÃO E DECISÃO DE
-                      TRANSPORTE</a>
+                    <a class="dropdown-item" href="#" style="white-space: break-spaces">FORMA DE CONDUÇÃO E DECISÃO DE TRANSPORTE</a>
                   </li>
                   <li>
                     <hr class="dropdown-divider" />
