--- a/pages/vitimaera.html
+++ b/pages/vitimaera.html
@@ -183,10 +183,10 @@
     </nav>
 
     <div class="form-group h-100">
-        <div class="container h-100 justify-content-center d-flex align-items-center">
-
-            <div class="row g-2 d-flex h-75" id="row">
-                <div class="col-6 d-flex p-4 justify-content-between">
+        <div class="container h-100 d-md-flex d-block justify-content-center align-items-center">
+            <form action="">
+            <div class="row d-block d-md-flex h-75" id="row">
+                <div class="col-6 col-md-10 d-flex p-4 justify-content-between">
                     <span class="d-flex">CICLISTA </span>
                     <div class="form-check">
                         <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
@@ -246,6 +246,7 @@
                         <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                     </div>
                 </div>
+            </form>
             </div>
         </div>
 
