--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -211,6 +211,7 @@
     </nav>
 
     <form action="processamento_cadastro.php" method="post">
+        <div class="form-group">
         <div class="container d-flex justify-content-center align-items-center geral">
             <div class="container-fluid" id="box" style="padding-top: 16px; padding-bottom: 16px;">
                 <label class="card-text mb-2">Nome Completo</label>
@@ -239,12 +240,12 @@
                     style="padding-left: 12px; padding-right: 12px; padding-top: 6px; padding-bottom: 6px;">
             </div>
         </div>
-    </form>
-
     <div class="d-flex justify-content-center">
         <div>
             <button class="btn btn-primary btn-lg">Cadastrar</button>
         </div>
+    </form>
+    </div>
     </div>
     <script>
         function mascaraData(input) {
