--- a/pages/glasglow.html
+++ b/pages/glasglow.html
@@ -223,6 +223,9 @@
       </div>
     </div>
   </nav>
+
+<form action="">
+  <div class="form-group">
   <div class="container-fluid h-100 w-100">
     <div class="row text-center d-flex align-items-center" id="row">
       <b>NÍVEL DE CONCIÊNCIA</b>
@@ -625,6 +628,7 @@
       </div>
     </div>
   </div>
+</div>
+</form>
 </body>
-
 </html>
