--- a/pages/equipedeatendimento.html
+++ b/pages/equipedeatendimento.html
@@ -63,6 +63,27 @@
             /* height: 70%; */
             border-radius: 10px;
         }
+
+        #botão {
+            margin-bottom: 3rem !important;
+        }
+
+        /*  */
+        @media screen and (min-width: 200px) and (max-width:460px) {
+
+            .navbar-title {
+                font-size: 13PX;
+            }
+
+        }
+
+        @media screen and (min-width: 200px) and (max-width:405px) {
+
+            .navbar-title {
+                font-size: 10.6PX;
+            }
+
+        }
     </style>
 </head>
 
@@ -96,7 +117,8 @@
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="#" style="white-space: break-spaces;">PROBLEMAS ENCONTRADOS SUSPEITOS</a></li>
+                                <li><a class="dropdown-item" href="#" style="white-space: break-spaces;">PROBLEMAS
+                                        ENCONTRADOS SUSPEITOS</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
@@ -120,7 +142,8 @@
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="#" style="white-space: break-spaces;">FORMA DE CONDUÇÃO E DECISÃO DE TRANSPORTE</a></li>
+                                <li><a class="dropdown-item" href="#" style="white-space: break-spaces;">FORMA DE
+                                        CONDUÇÃO E DECISÃO DE TRANSPORTE</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
@@ -203,7 +226,7 @@
         </div>
     </form>
 
-    <div class="d-flex justify-content-center mt-5">
+    <div class="d-flex justify-content-center mt-5" id="botão">
         <div>
             <button class="btn btn-primary btn-lg" id="botao">Retornar a tela de início</button>
         </div>
