--- a/pages/materiaisutilizados.html
+++ b/pages/materiaisutilizados.html
@@ -105,9 +105,15 @@
             border-radius: 5px;
         }
 
-        @media screen and (min-width: 375px) {
+        /* @media screen and (min-width: 375px) {
             .card1{
                 width: 96%;
+            }
+        } */
+
+        @media screen and (min-width: 320px) {
+            .card1{
+                width: 98%;
             }
         }
 
